# prompt-cache-bench

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  LICENSE  README.md  SECURITY.md  index.html  pyproject.toml  site.webmanifest
.codex/skills/prompt-cache-bench/: SKILL.md
.github/workflows/: ci.yml
docs/: benchmark-operations.md  methodology.md  online-preview.md  report-release-runbook.md
experiments/deepseek/deepseek-v4-flash/infron-vs-openrouter-routing-sort-cache-cost-4x50-stream-2026-06-19/: README.md
experiments/deepseek/deepseek-v4-flash/infron-vs-openrouter-routing-sort-cache-cost-4x50-stream-2026-06-19/code/: export_routing_report_pdf.py  rerun_routing_sort_cache_cost_ab.py
experiments/deepseek/deepseek-v4-flash/infron-vs-openrouter-routing-sort-cache-cost-4x50-stream-2026-06-19/data/: README.md  benchmark_pairs.csv  benchmark_requests.jsonl  records.json  records_unequal_input_tokens.json  summary.json
experiments/deepseek/deepseek-v4-flash/infron-vs-openrouter-routing-sort-cache-cost-4x50-stream-2026-06-19/metadata/: manifest.json
experiments/deepseek/deepseek-v4-flash/infron-vs-openrouter-routing-sort-cache-cost-4x50-stream-ttft-2026-06-27/: README.md
experiments/deepseek/deepseek-v4-flash/infron-vs-openrouter-routing-sort-cache-cost-4x50-stream-ttft-reasoning-none-2026-06-29/: README.md
scripts/: export_routing_report_pdf.py  prepare_ttft_release.py  rerun_routing_sort_cache_cost_ab.py  sync_report_release.py  validate_release.py
(+24 files in other folders)
